code/examples/stderr/misc_9.stderr
error[E0423]: expected value, found struct `Struct`
  --> examples/misc_9.rs:16:5
   |
3  | struct Struct {}
   | ---------------- `Struct` defined here
...
16 |     Struct;
   |     ^^^^^^ help: use struct literal syntax instead: `Struct {}`

error[E0618]: expected function, found struct `Unit`
  --> examples/misc_9.rs:10:5
   |
1  | struct Unit;
   | ----------- struct `Unit` defined here
...
10 |     Unit();
   |     ^^^^--
   |     |
   |     call expression requires function
   |
help: `Unit` is a unit struct, and does not take parentheses to be constructed
   |
10 -     Unit();
10 +     Unit;
   |

error[E0423]: expected function, tuple struct or tuple variant, found struct `Struct`
  --> examples/misc_9.rs:12:5
   |
3  | struct Struct {}
   | ---------------- `Struct` defined here
...
12 |     Struct();
   |     ^^^^^^^^ help: use struct literal syntax instead: `Struct {}`

Some errors have detailed explanations: E0423, E0618.
For more information about an error, try `rustc --explain E0423`.
error: could not compile `code` (example "misc_9") due to 3 previous errors
